--- a/polymer-v2.0.0-class-non-keyed/src/main-element.html
+++ b/polymer-v2.0.0-class-non-keyed/src/main-element.html
@@ -15,7 +15,7 @@
                                 <button type="button" class="btn btn-primary btn-block" id="run" on-click="run">Create 1,000 rows</button>
                             </div>
                             <div class="col-sm-6 smallpad">
-                                <button type="button" class="btn btn-primary btn-block" id="runLots" on-click="runLots">Create 10,000 rows</button>
+                                <button type="button" class="btn btn-primary btn-block" id="runlots" on-click="runLots">Create 10,000 rows</button>
                             </div>
                             <div class="col-sm-6 smallpad">
                                 <button type="button" class="btn btn-primary
